<?xml version="1.0" encoding="utf-8"?>
<resources>

       <string name="app_name">TaoJinXi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新数据</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
       <string name="xlistview_header_last_time">上次更新时间：</string>
       <string name="sao_sao">扫啊扫</string>
       <string name="index_promotion">淘金券</string>
    <string name="index_recharge">淘免费</string>
    <string name="index_group_buy">淘折扣</string>
    <string name="index_lottery">淘换购</string>
    <string name="index_order">淘尾货</string>
    <string name="index_history">淘聚惠</string>
    <string name="index_collect">淘试用</string>
    <string name="index_life_journey">淘新鲜</string>

</resources>
