<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.sun.taoshoppingmalls.MainActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_header" />

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_normalheight"
                android:background="@color/red"
                android:gravity="center"
                android:textSize="@dimen/normal_textsize"
                android:text="特色淘"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/tupian" />

            <LinearLayout
        android:id="@+id/eightshops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/bg_White"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <LinearLayout
                android:id="@+id/tjx_certificate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/index_promotion_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_promotion"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_free"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_recharge_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_recharge"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_rebate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_groupbuy_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_group_buy"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_cash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_lottery_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_lottery"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/tjx_sale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_order_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_order"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_history_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_history"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_trys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_collect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_collect"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tjx_news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/index_life_journey_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/gold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/index_life_journey"
                    android:textSize="@dimen/middles_textsize" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/jianxi" />
          
            <com.chu.taojinxi.customview.MyListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="3dp"
                android:numColumns="3"
                android:verticalSpacing="3dp" >
            </com.chu.taojinxi.customview.MyListView>
        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</LinearLayout>